# raytracer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Tupfile.lua  imgui.ini
lib/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
lib/sol2/: forward.hpp  sol.hpp
lib/sol2/sol/: forward.hpp  sol.hpp
lib/tinydir/: tinydir.h
scenes/: Hire.lua  Planes.lua  RGB.lua  SAM.lua  hireMe.gltf.glb  imgui.ini
src/: albedo.h  arguments.cpp  arguments.h  color.h  coordinateconversion.cpp  coordinateconversion.h  defaultscene.lua  diffuselighting.cpp  diffuselighting.h  facingratiolighttransport.cpp  facingratiolighttransport.h  filebrowserwindow.cpp  filebrowserwindow.h  fullscreenquad.cpp  fullscreenquad.h  geometry.cpp  geometry.h  gl_glfw.h  glfwmanager.cpp  glfwmanager.h  gui.cpp  gui.h  lerp.cpp  lerp.h  light.h  lighttransport.cpp  lighttransport.h  luabinding.cpp  luabinding.h  main.cc  main.cpp  map.frag  map.vert  maprenderer.cpp  maprenderer.h  mapwindow.cpp  mapwindow.h  material.h  meshinstance.cpp  meshinstance.h  (+44 more)
test/: test.cpp  testcoordianteconversion.cpp  testdiffuselighting.cpp  testlighttransport.cpp  testmollertrumbore.cpp  testplane.cpp  testraytracer.cpp  testrgbimage.cpp  testrgbimagethreaded.cpp  testspaceconversion.cpp  testsphere.cpp  testwavefrontobj.cpp
